// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableText integration tests is a snapshot with English localization 1`] = `
<div
  data-testid="test-expandable-text"
>
  <p
    class="text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 line-clamp-2"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo repellat adipisci et, eligendi ducimus accusamus consectetur, labore iusto esse, ratione pariatur laboriosam. Repudiandae, provident aspernatur. Adipisci nisi veniam incidunt tempore
  </p>
  <button
    class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-200 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600 py-2 px-4 relative  mt-1 py-2 [&]:px-0"
  >
    <span
      class="inline-flex items-center"
    >
      Expand
    </span>
  </button>
</div>
`;

exports[`ExpandableText integration tests is a snapshot with Russian localization 1`] = `
<div
  data-testid="test-expandable-text"
>
  <p
    class="text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 line-clamp-2"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo repellat adipisci et, eligendi ducimus accusamus consectetur, labore iusto esse, ratione pariatur laboriosam. Repudiandae, provident aspernatur. Adipisci nisi veniam incidunt tempore
  </p>
  <button
    class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-200 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600 py-2 px-4 relative  mt-1 py-2 [&]:px-0"
  >
    <span
      class="inline-flex items-center"
    >
      Развернуть
    </span>
  </button>
</div>
`;

exports[`ExpandableText tests is a basic snapshot 1`] = `
<div
  data-testid="test-expandable-text"
>
  <p
    class="text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 line-clamp-2"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo repellat adipisci et, eligendi ducimus accusamus consectetur, labore iusto esse, ratione pariatur laboriosam. Repudiandae, provident aspernatur. Adipisci nisi veniam incidunt tempore
  </p>
  <button
    class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-200 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600 py-2 px-4 relative  mt-1 py-2 [&]:px-0"
  >
    <span
      class="inline-flex items-center"
    >
      Expand
    </span>
  </button>
</div>
`;

exports[`ExpandableText tests is a snapshot with defaultExpanded set to true 1`] = `
<div
  data-testid="test-expandable-text"
>
  <p
    class="text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 "
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo repellat adipisci et, eligendi ducimus accusamus consectetur, labore iusto esse, ratione pariatur laboriosam. Repudiandae, provident aspernatur. Adipisci nisi veniam incidunt tempore
  </p>
  <button
    class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-200 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600 py-2 px-4 relative  mt-1 py-2 [&]:px-0"
  >
    <span
      class="inline-flex items-center"
    >
      Collapse
    </span>
  </button>
</div>
`;
